# finance-bot

./: .env.example  .gitignore  Next chapter.txt  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  temp_check_conn.py  temp_check_dsn.py  temp_check_frontend_backend_urls.py  temp_fix_markets_sql.py  temp_probe_api_payload.py  temp_run_api_check.py
backend/: main.py
backend/services/: advisor_engine.py
backend/services/aggregation/: app.py
backend/services/api/: app.py  routes.py
backend/services/ingestion/: __init__.py  app.py
backend/services/orchestrator/: app.py
db/: init.sql  untukmacbook.sql
docs/: architecture.md  database-schema.md  scheduler-config.md  smoke_test_note.md  telegram-integration.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vite.config.yaml
frontend/assets/: index-DTQWm05n.js
frontend/src/: main.tsx
scripts/: smoke_test.py
services/: __init__.py
services/aggregation/: __init__.py
services/orchestrator/: __init__.py  app.py
services/research/: __init__.py  app.py
services/telegram_notifier/: __init__.py  app.py
shared/: __init__.py  config.py  db.py  models.py  polymarket.py  polymarket_efficiency.py  telegram.py
